--- a/UnoStandardRefTest2/UnoStandardRefTest2.UWP/UnoStandardRefTest2.UWP.csproj
+++ b/UnoStandardRefTest2/UnoStandardRefTest2.UWP/UnoStandardRefTest2.UWP.csproj
@@ -10,6 +10,9 @@
 			-->
       <Version>6.2.2</Version>
     </PackageReference>
+    <PackageReference Include="Uno.UI">
+      <Version>1.45.0-dev.1799</Version>
+    </PackageReference>
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
